--- a/lang/cs/Org.Apache.REEF.Client/Org.Apache.REEF.Client.csproj
+++ b/lang/cs/Org.Apache.REEF.Client/Org.Apache.REEF.Client.csproj
@@ -111,6 +111,7 @@ under the License.
     <Compile Include="Local\TestRunner\FileWritingAssert\Parameters.cs" />
     <Compile Include="Local\TestRunner\FileWritingAssert\TestResult.cs" />
     <Compile Include="Local\TestRunner\LocalTestRunner.cs" />
+    <Compile Include="YARN\TestRunner\Parameters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="API\Testing\TestRunnerFactory.cs" />
     <Compile Include="YARN\ApplicationReport.cs" />
@@ -154,6 +155,9 @@ under the License.
     <Compile Include="YARN\RestClient\HttpClientRetryHandler.cs" />
     <Compile Include="Avro\YARN\SecurityToken.cs" />
     <Compile Include="YARN\SecurityTokenWriter.cs" />
+    <Compile Include="YARN\TestRunner\IFileSystemAssert\FileSystemAssert.cs" />
+    <Compile Include="YARN\TestRunner\IFileSystemAssert\Parameters.cs" />
+    <Compile Include="YARN\TestRunner\YarnTestRunner.cs" />
     <Compile Include="YARN\WindowsYarnJobCommandProvider.cs" />
     <Compile Include="YARN\JobResource.cs" />
     <Compile Include="YARN\JobSubmissionDirectoryProvider.cs" />
