--- a/lang/cs/xunit.targets
+++ b/lang/cs/xunit.targets
@@ -45,11 +45,16 @@ under the License.
     <Error Condition="!Exists('$(PackagesDir)\xunit.core.$(xUnitVersion)\build\portable-net45+win8+wp8+wpa81\xunit.core.props')" Text="$([System.String]::Format('$(NuGetError)', '$(PackagesDir)\xunit.core.$(xUnitVersion)\build\portable-net45+win8+wp8+wpa81\xunit.core.props'))" />
     <Error Condition="!Exists('$(PackagesDir)\xunit.runner.visualstudio.$(xUnitVersion)\build\net20\xunit.runner.visualstudio.props')" Text="$([System.String]::Format('$(NuGetError)', '$(PackagesDir)\xunit.runner.visualstudio.$(xUnitVersion)\build\net20\xunit.runner.visualstudio.props'))" />
   </Target>
-  <Target Name="InstallXunitConsoleRunner" BeforeTargets="Test">
+  <Target Name="InstallXunitConsoleRunner" BeforeTargets="Test;YarnTest">
     <Exec Command="$(SolutionDir)\.nuget\nuget.exe restore $(SolutionDir)\.nuget\packages.config -o $(PackagesDir)" />
   </Target>
   <Target Name="Test">
     <Exec Command="$(PackagesDir)\xunit.runner.console.$(xUnitVersion)\tools\xunit.console.exe $(OutputPath)\$(AssemblyName).dll -notrait Environment=Yarn -html $(OutputPath)\xunit_report.html"
+          IgnoreStandardErrorWarningFormat="true"
+      />
+  </Target>
+  <Target Name="YarnTest">
+    <Exec Command="$(PackagesDir)\xunit.runner.console.$(xUnitVersion)\tools\xunit.console.exe $(OutputPath)\$(AssemblyName).dll -trait Environment=portable -html $(OutputPath)\xunit_report.html"
           IgnoreStandardErrorWarningFormat="true"
       />
   </Target>
